--- a/install
+++ b/install
@@ -11,7 +11,7 @@ Encoding=UTF-8
 Version=0.9.4
 Type=Application
 Name=Dynamic Wallpaper
-Comment=Troca o Wallpaper automático
+Comment=Mojave Dynamic Wallpaper
 Exec=$exe
 OnlyShowIn=XFCE;
 StartupNotify=false
