--- a/install
+++ b/install
@@ -12,7 +12,7 @@ Version=0.9.4
 Type=Application
 Name=Dynamic Wallpaper
 Comment=Mojave Dynamic Wallpaper
-Exec=$exe
+Exec=$exe/runDynamicWallpaper
 OnlyShowIn=XFCE;
 StartupNotify=false
 Terminal=false
