--- a/install
+++ b/install
@@ -3,6 +3,7 @@
 mv mojave/ ../
 mv runDynamicWallpaper ../
 exe=$PWD
+exepath=$(dirname $exe)
 mkdir ~/.config
 mkdir ~/.config/autostart
 
@@ -12,7 +13,7 @@ Version=0.9.4
 Type=Application
 Name=Dynamic Wallpaper
 Comment=Mojave Dynamic Wallpaper
-Exec=$exe/../runDynamicWallpaper
+Exec=$exepath/runDynamicWallpaper
 OnlyShowIn=XFCE;
 StartupNotify=false
 Terminal=false
