--- a/install
+++ b/install
@@ -13,7 +13,7 @@ Version=0.9.4
 Type=Application
 Name=Dynamic Wallpaper
 Comment=Mojave Dynamic Wallpaper
-Exec=$exepath/runDynamicWallpaper
+Exec=$exepath/./runDynamicWallpaper
 OnlyShowIn=XFCE;
 StartupNotify=false
 Terminal=false
